# cove-easy-optout

./: .gitignore  .mcp.json  ACCEPTABLE_USE.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  handoff.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: broken-broker.yml  broker-request.yml
.story/: config.json  roadmap.json
.story/handovers/: 2026-05-30-01-bootstrap.md
.story/issues/: ISS-001.json  ISS-002.json  ISS-003.json  ISS-004.json  ISS-005.json  ISS-006.json  ISS-007.json  ISS-008.json  ISS-009.json  ISS-010.json  ISS-011.json  ISS-012.json  ISS-013.json  ISS-014.json
.story/notes/: N-001.json  N-002.json  N-003.json  N-004.json  N-005.json
.story/tickets/: T-001.json  T-002.json  T-003.json  T-004.json  T-005.json  T-006.json  T-007.json  T-008.json  T-009.json  T-010.json  (+5 more)
adapters/: mock.py  registry.py  whitepages.py
cove/: adapter.py  cli.py  config.py  drop_helper.py  engine.py  health.py  logging_config.py  manual_guide.py  registry.py  report.py  results.py  scheduler.py  updater.py
docs/: adapter-spec.md  architecture.md  broker-roadmap.md
tests/: test_adapter_interface.py  test_browser_session.py  test_captcha.py  test_cli.py  test_config.py  test_drop_helper.py  test_email_extractor.py  test_email_inbox.py  test_email_matcher.py  test_engine.py  test_health.py  test_logging.py  test_manual_guide.py  test_profile_crypto.py  test_profile_models.py  test_profile_store.py  test_registry.py  test_report.py  test_results.py  test_scheduler.py  test_screenshot.py  test_whitepages_adapter.py
(+96 files in other folders)
