[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cove-easy-optout"
version = "0.1.0"
description = "Local-first data-broker opt-out automation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "cryptography>=42.0",
]

[project.scripts]
cove = "cove.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["cove"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", ".venv/*"]
