[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cove-easy-optout"
version = "0.1.1"
description = "Local-first data-broker opt-out automation"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "jinja2>=3.0",
]

[project.scripts]
cove = "cove.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["cove", "adapters"]

[tool.hatch.build.targets.wheel.force-include]
"adapters/brokers" = "adapters/brokers"
"adapters/tests/fixtures" = "adapters/tests/fixtures"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*", ".venv/*"]
